<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_main"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="williamamills.colorify.LoginActivity">
    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" />
    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/registration_background"
        android:padding="25dp" >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/imageView"
        android:src="@drawable/colorify_title" />
    <!--<TextView-->
        <!--android:id="@+id/member_login_tv"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:text="Member Login"-->
        <!--android:textSize="25dp"-->
        <!--android:textStyle="bold"-->
        <!--android:typeface="monospace" />-->

    <EditText
        android:id="@+id/login_user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/register_uname"
        android:gravity="center"
        android:hint="Username"
        android:inputType="text"
        android:textColor="#000000"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/register_password"
        android:gravity="center"
        android:hint="**************"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/register_button"
        android:text="LOGIN"
        android:textColor="#ffffff"
        android:textSize="20dp" />
            <Button
                android:id="@+id/create_user_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/register_button"
                android:text="CREATE USER"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </RelativeLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/member_imview" />

</RelativeLayout>
