<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:src="@drawable/coding_app"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="80dp"
        android:id="@+id/wheel"
        android:src="@drawable/coding_app"/>
    <EditText
        android:layout_width="180px"
        android:layout_height="10px"
        android:layout_alignParentLeft = "@+id/main_enter"
        android:layout_alignParentRight ="@+id/main_enter"
        android:layout_alignTop= "@+id/main_enter"
        android:layout_alignBottom = "@+id/main_enter"
        android:hint="Search"

        android:id="@+id/main_activity_edit_text"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="200dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/container_body"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:padding="25dp"
            android:text="@string/login"
            android:id="@+id/main_enter"
            android:layout_gravity="bottom"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/color_button"
            android:text="Select Color"
            android:visibility="invisible" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:prompt="@string/spinner_title"
            android:entries="@array/spinner_choices"
            android:layout_below="@+id/main_enter"
            android:id="@+id/main_activity_choice_spinner"/>

    </LinearLayout>


    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="williamamills.colorify.FragmentDrawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout ="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
