...
    <string name="firebase_url">https://colorify.firebaseIO.com</string>
    <string name="content_description">Image from Instagram</string>
    <string name="spinner_title">Search Choice</string>
    <string name="image_path">myImage</string>
    <string name="thumbnail_image_path">thumbImage</string>
    <string name="opencv_image_path">myCVImage</string>
    <string name="empty_location_string">Must enter a location to search</string>
    <string name="image_not_saved">Error saving image</string>
    <string-array name="spinner_choices">
        <item>Popular</item>
        <item>Location</item>
        <item>Color: Popular</item>
        <item>Color: Tags</item>
...
